<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/TracksRecyclerView"
        android:layout_width="0dp"
        android:layout_height="510dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="77dp"
        android:background="@color/black"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_button_container"
        tools:listitem="@layout/partial_song_skeleton" />

    <FrameLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="Back"
            android:scaleType="centerInside"
            android:src="@drawable/back_button"
            app:tint="@null" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/filter_button_container"
        android:layout_width="0dp"
        android:layout_height="97dp"
        android:layout_marginHorizontal="16dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/alphabet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/a_z"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/shortest_button"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shortest"

            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/oldest_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"

            android:layout_weight="1"
            android:text="@string/earliest"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <include
        android:id="@+id/musicPlayerBar"
        layout="@layout/music_player_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
